
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    <EditText
        android:id="@+id/firstname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstname_hint"
        android:inputType="textPersonName"
        />
    <EditText
        android:id="@+id/lastname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname_hint"
        android:inputType="textPersonName"
        />
    <EditText
        android:id="@+id/postal_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/postal_address_hint"
        android:inputType="textNoSuggestions"/>  <!--textPostalAddress | textCapWords |-->


    <EditText
        android:id="@+id/city"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city_hint"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/country"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/country_hint"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/birthdate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birthdate_hint"
        android:inputType="text"
        />

    <Button
        android:text="Submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="31dp"
        android:id="@+id/buttonSubmit"
        android:onClick="sendRegistration"/>
    </LinearLayout>

</LinearLayout>